--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
         "express": "^4.17.1",
         "graphql": "^15.5.1",
         "jsonwebtoken": "^8.5.1",
+        "luxon": "^2.0.2",
         "mongodb": "^4.1.1",
         "mongoose": "^6.0.5",
         "mysql": "^2.18.1",
