--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
+        "subscriptions-transport-ws": "^0.9.19",
         "web-vitals": "^1.1.2"
     },
     "scripts": {
