--- a/server/package.json
+++ b/server/package.json
@@ -17,13 +17,15 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "graphql": "^15.5.1",
+        "graphql-subscriptions": "^1.2.1",
         "jsonwebtoken": "^8.5.1",
         "luxon": "^2.0.2",
         "mongodb": "^4.1.1",
         "mongoose": "^6.0.5",
         "mysql": "^2.18.1",
         "mysql2": "^2.2.5",
-        "sequelize": "^6.6.5"
+        "sequelize": "^6.6.5",
+        "subscriptions-transport-ws": "^0.9.19"
     },
     "devDependencies": {
         "nodemon": "^2.0.7"
