--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@graphql-tools/schema": "^8.2.0",
         "apollo-server-express": "^3.0.2",
         "bcryptjs": "^2.4.3",
         "dotenv": "^10.0.0",
